--- a/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
+++ b/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     width: 185px;
-
+padding-left: 20px;
     border: 1.5px solid var(--color);
     border-radius: 5px;
 }
@@ -10,7 +10,8 @@
 .name {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    font-weight: bold;
     width: 145px;
     height: 37px;
 }
