--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -4,6 +4,7 @@
 .input {
 	width :372px;
 	height: 36px;
+	border-radius: 5px;
 }
 
 .inputWrapper {
@@ -12,7 +13,7 @@
 	}
 
 .superInput {
-
+	border-radius: 10px;
 }
 
 .errorInput {
